# case-data-engineer-spec

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
config/: airflow.cfg
dags/: pipeline_coincap_dag.py
notebooks/: analise_dados.ipynb
sql/: check_vw.sql  gold_coincap.sql  vw_historica.sql
src/: config.py  extract.py  load_bigquery.py  main.py  transform.py  upload_gcs.py
